# Slack-Action-Bot

./: ..env.kate-swp  .env.example  .gitignore  CHANGELOG.md  CHANGES.md  DESIGN.md  IMPLEMENTATION_PLAN.md  README.md  config.py  documentration.md.txt  env  env.example  main.py  pyproject.toml  requirements.txt  test_all.py  test_e2e.py
.Old/: SCORING_BREAKDOWN.md  SLACK_ADVANCED_ACTIONS_PLAN.md
graph/: nodes.py  state.py  workflow.py
handlers/: commands.py  events.py  shared.py
services/: codereview_service.py  github_service.py  learn_service.py  llm_service.py  mcp_client.py  mcp_slack_server.py  release_service.py  reminder_service.py  slack_features.py  slack_search_service.py  slack_summarize_service.py
