[project]
name = "slack-action-bot"
version = "0.1.0"
description = "Slack Advanced Actions Bot - Smart action context, reminders, and GitHub integration powered by LangGraph"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "slack-bolt>=1.18.0",
    "slack-sdk>=3.23.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "apscheduler>=3.10.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["graph", "handlers", "services", "main.py", "config.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
